# c-wcp

c-wcp/: CMakeLists.txt  package.xml
c-wcp/include/c-wcp/: c-wcp.h  robot_state.h  util.h
c-wcp/src/: c-wcp.cpp  util.cpp
c-wcp_sample/: .rosinstall  CMakeLists.txt  package.xml
c-wcp_sample/config/: sample0.cnoid
c-wcp_sample/src/: CnoidCWCPSamplePlugin.cpp  jaxon_common.cpp  jaxon_common.h  sample0.cpp  world_common.cpp  world_common.h
